--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
+@import url("style/header.css");
+
 :root {
     --cor-de-fundo: #EBECEE;
 }
-
 body {
     background-color: var(--cor-de-fundo);
 }
